update the input field

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
       </p>
       <div class="input">
         <form>
-          <input type="text" placeholder="Set Winning Score" id="luck-input" />
+          <input
+            type="number"
+            placeholder="Set Winning Score"
+            id="luck-input"
+          />
           <input type="submit" value="Submit" />
           <input type="button" value="Reset" id="resetBtn" />
         </form>
